Consistent Navbar fontsize

--- a/adopt.html
+++ b/adopt.html
@@ -6,7 +6,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./reportstary.css" />
     <link rel="stylesheet" href="./navbar.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css"
+      crossorigin=""
+    />
     <!-- <link rel="stylesheet" href="./introSection.css"> -->
     <!-- <link rel="stylesheet" href="./mobileView.css"> -->
     <script
@@ -29,7 +33,10 @@
         class="flex flex-row items-center md:flex-row md:items-center p-5"
         id="logo"
       >
-        <span class="mission-1"> Saving <p>Lives</p> </span>
+        <span class="mission-1">
+          Saving
+          <p>Lives</p>
+        </span>
         <a class="logo-border" href="./index.html">
           <img
             class="rounded-full logo-size"
@@ -37,7 +44,10 @@
             alt="logo"
           />
         </a>
-        <span class="mission-2"> Saving <p>Animals</p> </span>
+        <span class="mission-2">
+          Saving
+          <p>Animals</p>
+        </span>
         <!--
     <div class="w-full mt-8 md:mt-0">
       <h1 class="text-4xl text_2  text-center md:text-left md:ml-12 uppercase font-serif font-bold " id = "heading-adopt-me">Adopt
@@ -71,7 +81,7 @@
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
           <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-[18px] space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-start lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
           >
             <li>
               <a
@@ -184,7 +194,10 @@
             </li>
             <li>
               <a id="theme-toggle">
-                <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
+                <i
+                  class="ri-sun-line turn-yellow-hover light-theme"
+                  id="switch"
+                ></i>
               </a>
             </li>
             <!-- google translate -->
@@ -369,10 +382,6 @@
       </div>
     </div>
 
-
-
-
-
     <footer class="bg-black text-white shadow-inner pt-4 pb-8">
       <div class="flex p-5 justify-between">
         <div
@@ -501,7 +510,6 @@
 
       <div
         class="pt-5 pb-8 flex flex-col text-center md:hidden mt-8 items-center flex-1"
-        
       >
         <div class="space-y-2">
           <h3 class="text-2xl text-center">Subscribe to our newsletter</h3>
@@ -532,11 +540,8 @@
             Copyright &copy; <span id="date"></span> [PetMe] All Right Reserved.
           </p>
         </div>
-       
       </div>
     </footer>
-
-
 
     <script src="./navbar.js"></script>
     <script src="./light-dark-theme.js"></script>
