--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
           <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
+            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-[18px] space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
           >
             <li>
               <a
@@ -334,7 +334,12 @@
                 </li>
               </ul>
               <a class="self-center pt-2" href="adopt.html">
-                <button type="button" class="hover-button text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button
+                  type="button"
+                  class="hover-button text-amber-900 bg-yellow-400"
+                >
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -383,7 +388,12 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button
+                  type="button"
+                  class="hover-button text-amber-900 bg-yellow-400"
+                >
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -438,7 +448,12 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button
+                  type="button"
+                  class="hover-button text-amber-900 bg-yellow-400"
+                >
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -491,7 +506,12 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button
+                  type="button"
+                  class="hover-button text-amber-900 bg-yellow-400"
+                >
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -546,7 +566,12 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button
+                  type="button"
+                  class="hover-button text-amber-900 bg-yellow-400"
+                >
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -599,7 +624,12 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button
+                  type="button"
+                  class="hover-button text-amber-900 bg-yellow-400"
+                >
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -654,7 +684,12 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button>
+                <button
+                  type="button"
+                  class="hover-button text-amber-900 bg-yellow-400"
+                >
+                  Adopt me
+                </button>
               </a>
             </div>
           </div>
@@ -707,7 +742,12 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button>
+                <button
+                  type="button"
+                  class="hover-button text-amber-900 bg-yellow-400"
+                >
+                  Adopt me
+                </button>
               </a>
             </div>
           </div>
@@ -727,9 +767,7 @@
           class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10"
         >
           <p id="contact"></p>
-          <h2
-            class="text-3xl mt-1 mb-2 text-center bold-500 text_3 text-white"
-          >
+          <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3 text-white">
             CONTACT US
           </h2>
           <p class="text-base text-center text_3 text-slate-200">
