Resolved 'Theme Change' button

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css"
-      crossorigin=""
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
     <link rel="stylesheet" href="./output.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./introSection.css" />
@@ -84,9 +80,7 @@
       </button>
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
-          <ul
-            class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between"
-          >
+          <ul class="w-[100vw] h-1/2 top-0 right-0 p-8 lg:p-4 mt-12 lg:mt-0 text-center text-base lg:text-lg space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
             <li>
               <a
                 href="#meet"
@@ -117,7 +111,7 @@
             </li>
             <li>
               <a
-                href="./donate.html"
+                href="./donate1.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Donate</a
               >
@@ -156,7 +150,7 @@
                 >
                   <a
                     href="volunteer.html"
-                    class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-400 hover:text-white"
+                    class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
                     >Become a Volunteer</a
                   >
                 </div>
@@ -172,7 +166,7 @@
             <li>
               <a href="#contact">
                 <button
-                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded mt-4 md:mt-0 hover:translate-x-2 transition-transform"
+                  class="inline-flex items-center bg-header-orange-light border-0 py-2 lg:py-2 text-choco text-base px-2 focus:outline-none text_4 font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform"
                 >
                   Contact Us
                   <svg
@@ -191,10 +185,7 @@
             </li>
             <li>
               <a id="theme-toggle">
-                <i
-                  class="ri-sun-line turn-yellow-hover light-theme"
-                  id="switch"
-                ></i>
+                <i class="ri-sun-line turn-yellow-hover light-theme" id="switch"></i>
               </a>
             </li>
             <!-- google translate -->
@@ -216,7 +207,7 @@
         <div class="heading-main-body">
           <div class="main-body-heading-text z-10">
             <h1 class="heading-main-body-h1"><span>Adopt</span> Me</h1>
-            <p class="text-white">Give life to an animal in need.</p>
+            <p >Give life to an animal in need.</p>
           </div>
         </div>
       </div>
@@ -334,7 +325,7 @@
                 </li>
               </ul>
               <a class="self-center pt-2" href="adopt.html">
-                <button type="button" class="hover-button text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button type="button" class="hover-button">Adopt me</button></a
               >
             </div>
           </div>
@@ -383,7 +374,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button type="button" class="hover-button">Adopt me</button></a
               >
             </div>
           </div>
@@ -438,7 +429,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button type="button" class="hover-button">Adopt me</button></a
               >
             </div>
           </div>
@@ -491,7 +482,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button type="button" class="hover-button">Adopt me</button></a
               >
             </div>
           </div>
@@ -546,7 +537,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button type="button" class="hover-button">Adopt me</button></a
               >
             </div>
           </div>
@@ -599,7 +590,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button></a
+                <button type="button" class="hover-button">Adopt me</button></a
               >
             </div>
           </div>
@@ -654,7 +645,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button>
+                <button type="button" class="hover-button">Adopt me</button>
               </a>
             </div>
           </div>
@@ -707,7 +698,7 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button  text-amber-900 bg-yellow-400">Adopt me</button>
+                <button type="button" class="hover-button">Adopt me</button>
               </a>
             </div>
           </div>
@@ -727,12 +718,10 @@
           class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10"
         >
           <p id="contact"></p>
-          <h2
-            class="text-3xl mt-1 mb-2 text-center bold-500 text_3 text-white"
-          >
+          <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3">
             CONTACT US
           </h2>
-          <p class="text-base text-center text_3 text-slate-200">
+          <p class="text-base text-center text_3">
             Any issues! Fill the form below and our team will contact you
             shortly.
           </p>
@@ -913,33 +902,30 @@
         <!-- Subscribe column -->
         <div class="md:flex flex-col hidden text-center items-center flex-1">
           <form id="subscription-form">
-            <div class="space-y-2">
-              <h3 class="text-2xl">Subscribe to our newsletter</h3>
-              <div class="text-md">
-                Get the latest news and updates delivered straight to your
-                inbox.
-              </div>
-              <div class="text-center">
-                <input
-                  class="my-1 mr-2 p-2 rounded-md text-black"
-                  type="email"
-                  id="email"
-                  name="email"
-                  placeholder="Enter your email address"
-                />
-                <div id="error-message" class="text-red-500 hidden">
-                  Email address is required.
-                </div>
-                <button
-                  class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
-                  type="submit"
-                  id="subscribe-button"
-                >
-                  Subscribe
-                </button>
-              </div>
+          <div class="space-y-2">
+            <h3 class="text-2xl">Subscribe to our newsletter</h3>
+            <div class="text-md">
+              Get the latest news and updates delivered straight to your inbox.
             </div>
-          </form>
+            <div class="text-center">
+              <input
+                class="my-1 mr-2 p-2 rounded-md text-black"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Enter your email address"
+              />
+              <div id="error-message" class="text-red-500 hidden">Email address is required.</div>
+              <button
+                class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md"
+                type="submit"
+                id="subscribe-button"
+              >
+                Subscribe
+              </button>
+            </div>
+          </div>
+        </form>
         </div>
         <!-- Subscribe column end -->
 
@@ -1067,19 +1053,21 @@
       });
     </script>
     <script>
+      
       // close the menu when a nav link is clicked
-      const menu_btn = document.querySelector("#nav-button");
-      const nav_links = document.querySelectorAll("nav ul li");
+      const menu_btn = document.querySelector('#nav-button')
+      const nav_links = document.querySelectorAll('nav ul li')
 
       nav_links.forEach((link) => {
-        link.addEventListener("click", () => {
+        link.addEventListener('click', () => {
           const currentWidth = window.innerWidth;
           console.log(currentWidth);
-          if (currentWidth <= 1024) {
+          if(currentWidth <= 1024) {
             menu_btn.click();
           }
-        });
-      });
+          
+        })
+      })
 
       // Add this JavaScript code to trigger the animation when About content comes into view
       window.addEventListener("scroll", function () {
@@ -1094,8 +1082,8 @@
         }
       });
     </script>
-    <script src="light-dark-theme.js"></script>
     <script src="index.js"></script>
     <script src="navbar.js"></script>
+    <script src="light-dark-theme.js"></script>
   </body>
 </html>
