--- a/donate1.html
+++ b/donate1.html
@@ -99,7 +99,7 @@
             </svg>
           </a>
           <div x-show="open" class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
-            <a href="volunteer.html" class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-400 hover:text-white">Become a Volunteer</a>
+            <a href="volunteer.html" class="block px-4 py-2 text-base text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become a Volunteer</a>
           </div>
           </div>
         </li>
@@ -274,7 +274,7 @@
           <div class="mt-4">
             <button
               type="submit"
-              class="inline-block w-full rounded-lg bg-black px-5 py-3 font-medium text-white sm:w-auto hover:bg-zinc-700 transform hover:scale-105 transition-transform"
+              class="inline-block w-full rounded-lg bg-black px-5 py-3 font-medium text-white sm:w-auto"
             >
               Submit
             </button>
