--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <a class="self-center pt-2" href="adopt.html">
                 <button
                   type="button"
-                  class="hover-button text-amber-900 bg-yellow-400"
+                  class="hover-button text-amber-900  bg-yellow-400"
                 >
                   Adopt me
                 </button></a
@@ -783,7 +783,7 @@
               Name
             </label>
             <input
-              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+              class="shadow appearance-none border outline-none rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
               id="contact_nom"
               name="contact_nom"
               type="text"
@@ -798,7 +798,7 @@
               Email
             </label>
             <input
-              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+              class="shadow appearance-none border outline-none rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
               id="contact_email"
               name="contact_email"
               type="email"
@@ -813,7 +813,7 @@
               >Message</label
             >
             <textarea
-              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+              class="shadow appearance-none border outline-none rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
               id="contact_message"
               name="contact_message"
               required
@@ -959,7 +959,7 @@
               </div>
               <div class="text-center">
                 <input
-                  class="my-1 mr-2 p-2 rounded-md text-black"
+                  class="my-1 mr-2 p-2 outline-none rounded-md text-black"
                   type="email"
                   id="email"
                   name="email"
