--- a/blog.html
+++ b/blog.html
@@ -92,6 +92,20 @@
             </li>
             <li>
               <a
+                href="./index.html#meet"
+                class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >Meet Pets</a
+              >
+            </li>
+            <li>
+              <a
+                href="./index.html#About"
+                class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+                >About Us</a
+              >
+            </li>
+            <li>
+              <a
                 href="./news.html"
                 class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
                 >Pet News</a
