fixed grammatical error

--- a/blogs/disha.html
+++ b/blogs/disha.html
@@ -103,7 +103,7 @@
 
                 </p>
 
-                <p class="text-[#5b5963] my-[1rem] mx-0 text-xl">Dog’s are not playthings for you’re entertainment, they’re sensitive, intelligent and loving creatures. Like humans they suffer, get depressed and get bored. With love, caring and compassion they will give you more happiness and joy than you could even imagine. So keeping your dog happy will in turn keep you happy. I call that a win-win situation.
+                <p class="text-[#5b5963] my-[1rem] mx-0 text-xl">Dogs are not playthings for your entertainment, they’re sensitive, intelligent and loving creatures. Like humans they suffer, get depressed and get bored. With love, caring and compassion they will give you more happiness and joy than you could even imagine. So keeping your dog happy will in turn keep you happy. I call that a win-win situation.
 
                 </p>
                 
