--- a/index.html
+++ b/index.html
@@ -764,13 +764,13 @@
         <form
           action="https://formspree.io/f/xayaokzl"
           method="POST"
-          class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10"
+          class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-black px-8 pt-8 pb-10 ok1"
         >
           <p id="contact"></p>
           <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3 text-white">
             CONTACT US
           </h2>
-          <p class="text-base text-center text_3 text-slate-200">
+          <p class="text-base text-center text_3 ">
             Any issues! Fill the form below and our team will contact you
             shortly.
           </p>
