Fixed adopt me button visibility

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <a class="self-center pt-2" href="adopt.html">
                 <button
                   type="button"
-                  class="hover-button text-amber-900 bg-yellow-400"
+                  class="hover-button text-white-900 bg-yellow-400"
                 >
                   Adopt me
                 </button></a
@@ -390,7 +390,7 @@
               <a class="self-center" href="adopt.html">
                 <button
                   type="button"
-                  class="hover-button text-amber-900 bg-yellow-400"
+                  class="hover-button text-white-900 bg-yellow-400"
                 >
                   Adopt me
                 </button></a
@@ -450,7 +450,7 @@
               <a class="self-center" href="adopt.html">
                 <button
                   type="button"
-                  class="hover-button text-amber-900 bg-yellow-400"
+                  class="hover-button text-white-900 bg-yellow-400"
                 >
                   Adopt me
                 </button></a
@@ -508,7 +508,7 @@
               <a class="self-center" href="adopt.html">
                 <button
                   type="button"
-                  class="hover-button text-amber-900 bg-yellow-400"
+                  class="hover-button text-white-900 bg-yellow-400"
                 >
                   Adopt me
                 </button></a
@@ -568,7 +568,7 @@
               <a class="self-center" href="adopt.html">
                 <button
                   type="button"
-                  class="hover-button text-amber-900 bg-yellow-400"
+                  class="hover-button text-white-900 bg-yellow-400"
                 >
                   Adopt me
                 </button></a
@@ -626,7 +626,7 @@
               <a class="self-center" href="adopt.html">
                 <button
                   type="button"
-                  class="hover-button text-amber-900 bg-yellow-400"
+                  class="hover-button text-white-900 bg-yellow-400"
                 >
                   Adopt me
                 </button></a
@@ -686,7 +686,7 @@
               <a class="self-center" href="adopt.html">
                 <button
                   type="button"
-                  class="hover-button text-amber-900 bg-yellow-400"
+                  class="hover-button text-white-900 bg-yellow-400"
                 >
                   Adopt me
                 </button>
@@ -744,7 +744,7 @@
               <a class="self-center" href="adopt.html">
                 <button
                   type="button"
-                  class="hover-button text-amber-900 bg-yellow-400"
+                  class="hover-button text-white-900 bg-yellow-400"
                 >
                   Adopt me
                 </button>
