--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
           <div>
             <a href="#top">
               <img
-                class="rounded-full w-24 cursor-pointer"
+                class="rounded-full w-24 cursor-pointer hover:scale-110"
                 src="./Assets/Images/logo.jpg"
                 alt="logo"
               />
