--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
           </div>
           <div class="flex justify-center">
             <button
-              class="bg-gray-800 hover:bg-gray-900 text-center text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+              class="bg-amber-800 hover:bg-amber-700 text-center text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
               type="submit"
             >
               Submit
