--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <br />
       <div>
         <h1
-          class="m-heading text-3xl lg:text-6xl hover:shadow-2xl antialiased hover:subpixel-antialiased"
+          class="m-heading text-3xl lg:text-6xl "
         >
           Meet our Friends Here
         </h1>
@@ -291,7 +291,7 @@
           </div>
           <div class="main-text">
             <div class="p-4 flex flex-col gap-2">
-              <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center">
+              <h5 class="text_3 md:text-[40px] font-bold mb-2 text-center ">
                 Bongo
               </h5>
               <ul class="grid grid-cols-2 gap-5 text_4">
