changed submit button color

--- a/adopt.html
+++ b/adopt.html
@@ -348,7 +348,7 @@
               <div class="form-group">
                 <button
                   class="bg-green-500 hover:bg-green-700 text-center py-3 px-12 rounded-full transition-all duration-300 ease-in-out text-black font-bold"
-                >
+                style="background-color:brown">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     enable-background="new 0 0 68 68"
