Fixed Scroll To Top and Footer Text

--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
         <div class="md:pr-8 hover-effect">
           <a href="#top">
             <button id="bttbutton" title="backtotop">
-              <img src="./image.svg" class="w-6 md:w-10 md:object-left" />
+              <img src="./image.svg" class="w-6 md:w-10 md:object-left sm:w-10" />
             </button>
           </a>
         </div>
