--- a/blog.html
+++ b/blog.html
@@ -283,7 +283,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="fill-white facebook-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -299,7 +299,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="fill-white instagram-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -319,7 +319,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="fill-white github-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
