--- a/donate.html
+++ b/donate.html
@@ -328,7 +328,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="fill-white facebook-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -344,7 +344,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="fill-white instagram-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -364,7 +364,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="fill-white github-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
