feat : Update blog.html
added 'blog-card' class name to cards

--- a/blog.html
+++ b/blog.html
@@ -228,7 +228,7 @@
 
       <!---Blogs card-->
       <div
-        class="relative flex flex-wrap items-center justify-center grid-cols-1 mx-0 z-2 my-7"
+        class="relative flex flex-wrap items-center justify-center grid-cols-1 mx-0 z-2 my-7 blog-card"
         id="data-output"
       ></div>
     </section>
