Fixed light-theme text color in Contact Form

--- a/index.html
+++ b/index.html
@@ -718,10 +718,10 @@
           class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10"
         >
           <p id="contact"></p>
-          <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3">
+          <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text-white">
             CONTACT US
           </h2>
-          <p class="text-base text-center text_3">
+          <p class="text-base text-center text-white">
             Any issues! Fill the form below and our team will contact you
             shortly.
           </p>
