--- a/volunteer.html
+++ b/volunteer.html
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                     <div class="p-4 w-full">
-                        <button type="submit" class="flex mx-auto text-white bg-amber-800 border-0 py-2 px-8 rounded-md cursor-pointer hover:bg-indigo-600">
+                        <button type="submit" class="flex mx-auto text-white bg-amber-800 border-0 py-2 px-8 rounded-md cursor-pointer hover:bg-orange-600">
                             Submit
                         </button>
                     </div>
