--- a/donate.html
+++ b/donate.html
@@ -33,7 +33,7 @@
         margin-left: auto;
         margin-right: auto;
         color: white;
-        background-color: #4F46E5;
+        background-color: #92400E;
         border: none;
         padding-top: 0.5rem;
         padding-bottom: 0.5rem;
@@ -45,7 +45,7 @@
       }
       
       #submit_button:hover {
-        background-color: #4338C6;
+        background-color: #c95f1e;
         
       }
     </style>
