--- a/donate.html
+++ b/donate.html
@@ -424,6 +424,7 @@
 
   <script src="navbar.js"></script>
   <script src="light-dark-theme.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
