--- a/donate1.html
+++ b/donate1.html
@@ -293,5 +293,6 @@
   </section>
   <script src="navbar.js"></script>
   <script src="light-dark-theme.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
