- Fixed Input styles inconsistent in SOS Report Page - Insert Question Mark Icon into Help button - Insert new row into Contributors.md

--- a/reportstary.html
+++ b/reportstary.html
@@ -227,7 +227,7 @@
       <div class="form-group mt-2">
         <label for="comment">Would you like to share any additional information about the stray animal's
           condition?</label>
-        <textarea id="comment" class="input-textarea focus:outline-green-400 border-2 border-gray-200" name="comment"
+        <textarea id="comment" class="input-textarea form-control" name="comment"
           placeholder="Enter your comment here..."></textarea>
       </div>
 
@@ -241,7 +241,10 @@
 
     </form>
   </div>
-  <button class="help_btn bg-amber-900 hover:bg-yellow-900">Help</button>
+  <button class="help_btn bg-amber-900 hover:bg-yellow-900">
+    <i class="ri-question-line text-lg"></i>
+    Help
+  </button>
 
   <dialog id="popup" class="popup border-2 border-green-500" style="display:none">
     <div class="bg-white rounded-lg p-6 max-w-md">
