revert last commit

--- a/reportstary.html
+++ b/reportstary.html
@@ -241,10 +241,7 @@
 
     </form>
   </div>
-  <button class="help_btn bg-amber-900 hover:bg-yellow-900">
-    <i class="ri-question-line text-lg"></i>
-    Help
-  </button>
+  <button class="help_btn bg-amber-900 hover:bg-yellow-900">Help</button>
 
   <dialog id="popup" class="popup border-2 border-green-500" style="display:none">
     <div class="bg-white rounded-lg p-6 max-w-md">
