<Fixes Contact Form>

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
         <form
           action="https://formspree.io/f/xayaokzl"
           method="POST"
-          class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10"
+          class="bg-black rounded-md main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10"
         >
           <p id="contact"></p>
           <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3">
@@ -747,7 +747,7 @@
           <br />
           <div class="mb-4">
             <label
-              class="block text-white text-sm font-bold mb-2"
+              class="block text_3 text-sm font-bold mb-2"
               for="contact_nom"
             >
               Name
@@ -762,7 +762,7 @@
           </div>
           <div class="mb-6">
             <label
-              class="block text-white text-sm font-bold mb-2"
+              class="block text_3 text-sm font-bold mb-2"
               for="contact_email"
             >
               Email
@@ -779,7 +779,7 @@
           <div class="mb-6">
             <label
               for="contact_message"
-              class="block text-white text-sm font-bold mb-2"
+              class="block text_3 text-sm font-bold mb-2"
               >Message</label
             >
             <textarea
@@ -793,7 +793,7 @@
           </div>
           <div class="flex justify-center">
             <button
-              class="bg-amber-800 hover:bg-amber-700 text-center text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+              class="bg-amber-800 hover-button hover:bg-amber-700 text-center text_3  font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
               type="submit"
             >
               Submit
