--- a/blog.html
+++ b/blog.html
@@ -281,6 +281,7 @@
                 id="email"
                 name="email"
                 placeholder="Enter your email address"
+                title="Please enter a valid email address"
               />
               <button
                 class="bg-red-600 hover:bg-red-500 text-white py-2 px-4 rounded-md"
