--- a/index.html
+++ b/index.html
@@ -726,6 +726,8 @@
     </section>
     <!-- style="opacity: 0; transform: translateX(50px); transition: opacity 1s ease, transform 1s ease;"   -->
     <!--     Contact us section html starts from here -->
+
+    
     <section id="contact" class="dark:bg-gray-900 b_1 pt-40 pb-20">
       <div
         class="w-full contact-form-container mx-auto max-w-screen-md"
@@ -734,7 +736,7 @@
         <form
           action="https://formspree.io/f/xayaokzl"
           method="POST"
-          class="bg-black rounded-md main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-8 pb-10"
+          class="bg-black rounded-lg main-bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-200 px-8 pt-8 pb-10"
         >
           <p id="contact"></p>
           <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text_3">
@@ -753,7 +755,7 @@
               Name
             </label>
             <input
-              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+              class="shadow appearance-none border rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
               id="contact_nom"
               name="contact_nom"
               type="text"
@@ -768,7 +770,7 @@
               Email
             </label>
             <input
-              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+              class="shadow appearance-none border rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
               id="contact_email"
               name="contact_email"
               type="email"
@@ -783,7 +785,7 @@
               >Message</label
             >
             <textarea
-              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
+              class="shadow appearance-none border rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
               id="contact_message"
               name="contact_message"
               required
@@ -793,7 +795,7 @@
           </div>
           <div class="flex justify-center">
             <button
-              class="bg-amber-800 hover-button hover:bg-amber-700 text-center text_3  font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+              class="bg-amber-800 hover-button hover:bg-amber-700 text-center text_3  font-bold py-2 px-4 rounded-lg focus:outline-none focus:shadow-outline"
               type="submit"
             >
               Submit
