<Fixes Volunteer Page Submit Button & Typoaswell>

--- a/volunteer.html
+++ b/volunteer.html
@@ -216,12 +216,12 @@
                         <div class="p-2 w-full">
                             <input type="checkbox" name="check" id="check" required>
                             <span class="p-1 font-medium text-gray-900">
-                                I've read and agree to the Terms and Conditions for volunteering this organisation.
+                                I've read and agreed to the Terms and Conditions for volunteering this organisation.
                             </span>
                         </div>
                     </div>
                     <div class="p-4 w-full">
-                        <button type="submit" class="flex mx-auto text-white bg-amber-800 border-0 py-2 px-8 rounded-md cursor-pointer hover:bg-orange-500">
+                        <button type="submit" class="flex bg-amber-800 hover-button hover:bg-amber-700 mx-auto text-white bg-amber-800 border-0 py-2 px-8 rounded-md cursor-pointer hover:bg-orange-500">
                             Submit
                         </button>
                     </div>
