More Specific Option Add in Condtion of animal

--- a/reportstary.html
+++ b/reportstary.html
@@ -219,6 +219,10 @@
         </label>
         <label>
           <input name="user-recommend" value="no" type="radio" class="input-radio" />
+          Minor Injuries
+        </label>
+        <label>
+          <input name="user-recommend" value="no" type="radio" class="input-radio" />
           Moderate health
         </label>
       </div>
